--- a/RealStyle.css
+++ b/RealStyle.css
@@ -1,6 +1,6 @@
 body
 {
-    background: linear-gradient(to bottom, #b1f959, #f91e5f);
+    background: linear-gradient(to bottom, #89e1ff, #f91e5f);
     font-family: BaniFont;
 }
 
