--- a/RealStyle.css
+++ b/RealStyle.css
@@ -1,6 +1,6 @@
 body
 {
-    background: linear-gradient(to bottom, #8be2ff, #f91e5f);
+    background: linear-gradient(to bottom, #89e1ff, #f91e5f, rgb(0, 255, 0));
     font-family: BaniFont;
 }
 
