--- a/RealStyle.css
+++ b/RealStyle.css
@@ -1,7 +1,8 @@
 body
 {
-    background: linear-gradient(to bottom, #89e1ff, #f91e5f, rgb(0, 255, 0));
+    background: linear-gradient(to bottom, rgba(137, 225, 255, 0.7), rgba(249, 31, 97, 0.7), rgba(0, 255, 0, 0.7));
     font-family: BaniFont;
+    overflow-x: hidden;
 }
 
 @font-face {
@@ -46,8 +47,41 @@ header span:nth-child(9) { animation-delay: 0.8s; color:rgb(120, 0, 126)}
     50% { transform: translateY(-30px); }
 }
 
+@keyframes cloud1
+{
+    0% {transform: translateX(-70vw) translateY(-40vh); opacity:0.7;}
+    100% {transform: translateX(70vw) translateY(-40vh); opacity:0;}
+}
 
-img
+@keyframes cloud2
+{
+    0% {transform: translateX(140vw) translateY(15vh); opacity:0.7;}
+    100% {transform: translateX(-70vw) translateY(15vh); opacity:0;}
+}
+
+.cloud1
+{
+    position: absolute;                   
+    width: 30vw;                  
+    animation: cloud1 60s linear infinite; 
+    z-index: -1;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.cloud2 {
+    position: absolute;                   
+    width: 35vw;                  
+    animation: cloud2 75s linear infinite; 
+    z-index: -1;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+
+.arrow
 {
     width:5vw;
 }
