--- a/RealStyle.css
+++ b/RealStyle.css
@@ -3,6 +3,7 @@ body
     background: linear-gradient(to bottom, rgba(137, 225, 255, 0.7), rgba(249, 31, 97, 0.7), rgba(0, 255, 0, 0.7));
     font-family: BaniFont;
     overflow-x: hidden;
+    width:100vw;
 }
 
 @font-face {
