--- a/RealStyle.css
+++ b/RealStyle.css
@@ -50,14 +50,26 @@ header span:nth-child(9) { animation-delay: 0.8s; color:rgb(120, 0, 126)}
 
 @keyframes cloud1
 {
-    0% {transform: translateX(-70vw) translateY(-40vh); opacity:0.7;}
-    100% {transform: translateX(70vw) translateY(-40vh); opacity:0;}
+    0% {transform: translateX(-70vw); opacity:0.7;}
+    100% {transform: translateX(70vw); opacity:0;}
 }
 
 @keyframes cloud2
 {
-    0% {transform: translateX(140vw) translateY(15vh); opacity:0.7;}
-    100% {transform: translateX(-70vw) translateY(15vh); opacity:0;}
+    0% {transform: translateX(140vw); opacity:0.7;}
+    100% {transform: translateX(-70vw); opacity:0;}
+}
+
+@keyframes cloud3
+{
+    0% {transform: translateX(-100vw); opacity:0.7;}
+    100% {transform: translateX(70vw); opacity:0;}
+}
+
+@keyframes cloud4
+{
+    0% {transform: translateX(90vw); opacity:0.7;}
+    100% {transform: translateX(-70vw); opacity:0;}
 }
 
 .cloud1
@@ -75,6 +87,26 @@ header span:nth-child(9) { animation-delay: 0.8s; color:rgb(120, 0, 126)}
     position: absolute;                   
     width: 35vw;                  
     animation: cloud2 75s linear infinite; 
+    z-index: -1;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.cloud3 {
+    position: absolute;                   
+    width: 25vw;                  
+    animation: cloud3 50s linear infinite; 
+    z-index: -1;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.cloud4 {
+    position: absolute;                   
+    width: 30vw;                  
+    animation: cloud2 100s linear infinite; 
     z-index: -1;
     left: 0;
     right: 0;
